--- a/web/console/package.json
+++ b/web/console/package.json
@@ -47,6 +47,7 @@
     "ifvisible.js": "^1.0.6",
     "immer": "^7.0.8",
     "js-base64": "^3.4.5",
+    "js-cookie": "^3.0.1",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.14",
     "marked": "^0.7.0",
@@ -67,6 +68,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "=2.0.1",
+    "spark-md5": "^3.0.2",
+    "tea-chart": "^2.4.6",
     "tea-component": "^2.7.3",
     "ts-optchain": "^0.1.7",
     "use-immer": "^0.4.1",
